20110328 configure.in: allow the user to say they do not want to use windres
         (works around bug #3248008; thanks, Cygnus).
20110401 peripherals/disk/{opus,plusd}.c: remove incorrect use of GCC_UNUSED
         (Stuart).
20110401 fuse.c,ui/{gtk/gtkui.c,widget/menu.c},windres.rc: update copyright
         dates (Stuart).
20110402 machines/{machines_periph.c,spec48_ntsc.c},peripherals/disk/crc.c,
         ui/gtk/fileselector.c,ui/{gtk,widget,win32}/options.pl,
         unittests/unittests.c: add missing #includes (Stuart).
20110402 peripherals/if1.c,ui/{gtk,widget,win32}/{options,options-header}.pl:
         add missing 'void' in K&R-style parameter lists (Stuart).
20110402 peripherals/{machines_periph.c,disk/disk.c},sound/blipbuffer.c:
         add 'static' to function definitions where appropriate (Stuart).
20110402 ui/{gtk,win32}/options.pl,utils.c: add const qualifiers (Stuart).
20110403 ui/win32/win32ui.c: implement Snap Joystick Prompt. Enable default
         button, ESC key and the ability to use arrow up/down to cycle (patch
         #3258533) (Sergio Baldovi).
20110403 peripherals/disk/upd_fdc.c: fix compilation warnings (patch #3259355)
         (Sergio Baldovi and Gergely Szasz).
20110403 ui/gtk/{gtkdisplay.c,gtkinternals.h,statusbar.c}: add current machine
         name to GTK+ statusbar (patch #3208815) (Sergio Baldovi).
20110404 ui/win32/about.rc: fix spelling (Stuart).
20110404 bitmap.h,peripherals/{disk/{beta.c,opus.[ch],plusd.[ch],upd_fdc.h,
         wd_fdc.[ch]},fuller.h}: update my email address (Stuart).
20110404 sound.[ch]: make certain variables be private to sound.h and remove
         unused variables (Stuart).
20110404 sound.c: add missing 'static' to function definition (Stuart).
20110405 sound.c: set treble on 'right' buffer for AY channel C when stereo
         output is enabled (Stuart).
20110405 sound.c: avoid calling option_enumerate_sound_speaker_type()
         repeatedly (Stuart).